# underwriting-assessor

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-build-deploy.yml
config/: new_client.yaml  renewal.yaml
data/: sample_type_claim.csv
data/output/: insurance_target.csv
exp/: exp2.py  judge.py
logs/: README.md  readme.md
logs/learning/: dataset-creation.md  exploration.md  feature-engineering.md  frequency-modelling.md  severity-modelling.md
notebook/: dataset-preparation.ipynb  dataset.ipynb  explore.ipynb  feature-engineering.ipynb  feature.ipynb  frequency.ipynb  ml-modelling-frequency.ipynb  ml-modelling.ipynb  readme.md  risk-classification.ipynb  severity.ipynb
notebook/freq-sev-approach/: dataset.ipynb  explore.ipynb  feature.ipynb  frequency.ipynb
notebook/freq_sev/: dataset.ipynb  feature.ipynb  feature_new.ipynb  feature_renewal.ipynb  frequency.ipynb  severity.ipynb
notebook/premium/: datasets.ipynb  explore.ipynb  feature_engineering.ipynb
notebook/premium-approach/: dataset.ipynb  datasets.ipynb  explore.ipynb  feature_eng.ipynb  model_development.ipynb  model_explainability.ipynb  model_inference.ipynb  preprocessing.ipynb
src/: __init__.py  config.py  data.py  dataset.py  feature.py  inference.py  metrics.py  model-dev-frequency.py  model.py  tracking.py
tests/: test_base.py  test_data.py  test_dataset.py  test_driver.py  test_factory.py  test_feature.py  test_frequency.py  test_inference.py  test_loader.py  test_splitter.py  test_tracking.py  test_vehicle.py
train/: exp.py
(+46 files in other folders)
