[project]
name = "underwriting-risk-assessment"
version = "0.1.0"
description = "Underwriting Risk Assessment Project"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "langchain-anthropic>=0.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.8.0",
    "langchain-core>=0.1.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "pypdf>=5.6.0",
    "docx2txt>=0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
